# icons8-download-cli

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
data/: styles.json
src/icons8_download_cli/: __init__.py  api.py  cache.py  cli.py  downloader.py  models.py
